--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Mar 28 15:34:10 COT 2020
-sdk.dir=C\:\\Users\\Andres\\android-sdks
+#Tue Mar 31 21:13:00 COT 2020
+sdk.dir=C\:\\Users\\Familia Velasco\\AppData\\Local\\Android\\Sdk
